fix: mobile alignment

--- a/app/colors/color-picker.css
+++ b/app/colors/color-picker.css
@@ -126,7 +126,7 @@
     border-radius: 50%;
     background: #ffffff;
     cursor: pointer;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
 }
 
 .woh__color-input::-moz-range-thumb {
