--- a/components/navigation/styles/album-selector.css
+++ b/components/navigation/styles/album-selector.css
@@ -1,5 +1,4 @@
 #woh__album-picker {
-    margin: 0 0.5rem;
     background: inherit;
     color: inherit;
     font-family: Georgia, Times, serif;
